Added geolocation so that user's current location can be obtained

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "react-google-login": "^5.2.2",
     "@reach/combobox": "^0.17.0",
     "@react-google-maps/api": "^2.11.8",
+    "geolocation": "^0.2.0",
     "react-geocode": "^0.2.3",
     "react-simple-maps": "^2.3.0"
   }
