First step of Google Calendar api usage

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,5 @@ npm install bootstrap react-router-dom
 
 In client dir run:
 npm install @mui/material @emotion/react @emotion/styled
-npm install --force @material-ui/icons   (Maybe avoid this, idk)
+
+npm install --force react-google-login
