--- a/react-connectucla/package.json
+++ b/react-connectucla/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.7.0",
     "@react-oauth/google": "^0.2.4",
     "@testing-library/jest-dom": "^5.16.4",
