--- a/react-connectucla/package.json
+++ b/react-connectucla/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.7.0",
+    "@reach/combobox": "^0.17.0",
+    "@react-google-maps/api": "^2.11.8",
     "@react-oauth/google": "^0.2.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
