--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "@mui/icons-material": "^5.8.0",
-    "react-google-login": "^5.2.2",
     "@reach/combobox": "^0.17.0",
     "@react-google-maps/api": "^2.11.8",
     "geolocation": "^0.2.0",
     "react-geocode": "^0.2.3",
+    "react-google-login": "^5.2.2",
     "react-simple-maps": "^2.3.0"
+  },
+  "devDependencies": {
   }
 }
