--- a/react-connectucla/package.json
+++ b/react-connectucla/package.json
@@ -16,7 +16,6 @@
     "react-geocode": "^0.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
-    "react-simple-maps": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +43,22 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lussebullen/ConnectUCLA.git"
+  },
+  "keywords": [
+    "events",
+    "social",
+    "media"
+  ],
+  "author": "Elyse Foreman, Mathias Duedahl, Remas Bashanfar, Samir Abdalla",
+  "license": "AFL-1.1",
+  "bugs": {
+    "url": "https://github.com/Lussebullen/ConnectUCLA/issues"
+  },
+  "homepage": "https://github.com/Lussebullen/ConnectUCLA#readme"
 }
